cortex-r5-sample/tests/ui/data_guard_cannot_send.stderr
error[E0277]: `UnsafeCell<u32>` cannot be shared between threads safely
  --> tests/ui/data_guard_cannot_send.rs:19:19
   |
19 |     requires_send(guard);
   |     ------------- ^^^^^ `UnsafeCell<u32>` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Sync` is not implemented for `UnsafeCell<u32>`
   = note: required for `&UnsafeCell<u32>` to implement `Send`
note: required because it appears within the type `DataGuard<'_, u32>`
  --> src/safe/mutex.rs
   |
   | pub struct DataGuard<'a, T> {
   |            ^^^^^^^^^
note: required by a bound in `requires_send`
  --> tests/ui/data_guard_cannot_send.rs:10:21
   |
10 | fn requires_send<T: Send>(_: T) {}
   |                     ^^^^ required by this bound in `requires_send`
help: consider dereferencing here
   |
19 |     requires_send(*guard);
   |                   +

error[E0277]: `*const ()` cannot be sent between threads safely
  --> tests/ui/data_guard_cannot_send.rs:19:19
   |
19 |     requires_send(guard);
   |     ------------- ^^^^^ `*const ()` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `DataGuard<'_, u32>`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `cortex_r5_sample::safe::MutexGuard<'_>`
  --> src/safe/mutex.rs
   |
   | pub struct MutexGuard<'a> {
   |            ^^^^^^^^^^
note: required because it appears within the type `DataGuard<'_, u32>`
  --> src/safe/mutex.rs
   |
   | pub struct DataGuard<'a, T> {
   |            ^^^^^^^^^
note: required by a bound in `requires_send`
  --> tests/ui/data_guard_cannot_send.rs:10:21
   |
10 | fn requires_send<T: Send>(_: T) {}
   |                     ^^^^ required by this bound in `requires_send`
help: consider dereferencing here
   |
19 |     requires_send(*guard);
   |                   +
